Restructurando modelos y servicio de Storage